--- a/css/styles.less
+++ b/css/styles.less
@@ -160,9 +160,11 @@ header {
       position: relative;
       transition: all .5s;
       margin-bottom: 80px;
-      width: 290px;
+//      width: 290px;
       margin-right: 17px;
       float: left;
+      background-size: cover !important;
+      background-position: center center !important;
       &:nth-of-type(1n+5) {
         margin-bottom: 10px;
       }
@@ -204,7 +206,6 @@ header {
     }
     @media (max-width: @mobile) {
       .cat {
-        float: none;
         margin: 0 auto 60px !important;
       }
     }
