--- a/css/styles.less
+++ b/css/styles.less
@@ -4,6 +4,7 @@
 @white: #fefeff;
 @brown: #322a25;
 @mobile: 767px;
+@green: #4a9037;
 
 * {
   box-sizing: border-box;
@@ -45,6 +46,12 @@ body, html {
 
 .topHeader {
   padding: 10px 0px;
+  .partners {
+    img {
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+  }
   .topBasket {
     float: right;
   }
@@ -253,7 +260,7 @@ header {
   margin-bottom: 20px;
   &:hover {
     transition: all .4s;
-    background: #1c2b80;
+    background: #25419b;
   }
 }
 
@@ -282,5 +289,135 @@ header {
     bottom: -10px;
     background: url("../img/background.jpg") no-repeat center center;
     background-size: 140px 10px;
+  }
+}
+
+.prodList {
+  background: @white;
+  padding: 10px;
+  border-bottom: 1px solid #bbbbbb;
+  transition: all .4s;
+  &:hover {
+    box-shadow: 0px 0px 15px -4px rgba(0, 0, 0, 0.8);
+    position: relative;
+    cursor: pointer;
+    transition: all .4s;
+    background: #e7e7e8;
+  }
+  &:last-of-type {
+    border-bottom: 0px;
+  }
+  .prodImage {
+    float: left;
+    width: 92px;
+    height: 92px;
+    overflow: hidden;
+    border: 1px solid #b9bec4;
+    margin-right: 10px;
+  }
+  .prodInfo {
+    float: left;
+    width: 348px;
+    .prodHeading {
+      margin-bottom: 15px;
+      .title {
+        font-family: 'Lobster', Arial, sans-serif;
+        font-size: 1.250em;
+        color: @brown;
+      }
+      .timer {
+        font-size: 0.750em;
+        color: #8c8c8c;
+        float: right;
+        img {
+          margin-left: 5px;
+          vertical-align: middle;
+        }
+      }
+    }
+    table {
+      width: 100%;
+      font-size: 0.750em;
+      font-weight: bold;
+      color: black;
+      td {
+        padding-bottom: 5px;
+        vertical-align: top;
+        &:nth-of-type(2n) {
+          text-align: right;
+        }
+        .maxQuality {
+          color: @green;
+        }
+        .prodPrice {
+          font-size: 1.5em;
+        }
+        .username {
+          a {
+            color: #3b9da1;
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+content {
+  margin-top: 30px;
+  display: block;
+  font-size: 0.875em;
+  line-height: 150%;
+  color: @white;
+  h2 {
+    font-family: 'Lobster', Arial, sans-serif;
+    font-size: 1.875em;
+    margin-bottom: 10px;
+  }
+}
+
+.startNowBtn {
+  margin: 20px 0px;
+  background: @orange;
+  transition: all .4s;
+  &:hover {
+    background: #f8573c;
+  }
+}
+
+footer {
+  padding-bottom: 50px;
+  margin-top: 35px;
+  padding-top: 20px;
+  border-top: 1px solid #fff;
+  .footerDesc {
+    font-family: 'Lobster', Arial, sans-serif;
+    color: @white;
+    font-size: 1.125em;
+    margin-bottom: 15px;
+  }
+  ul {
+    padding: 0;
+    list-style: none;
+    li {
+      line-height: 130%;
+      a {
+        color: @white;
+        font-size: 0.875em;
+        transition: all .4s;
+        &:hover {
+          text-decoration: underline;
+          transition: all .4s;
+        }
+      }
+    }
+  }
+  .socials {
+    float: right;
+    img {
+      margin-right: 10px;
+    }
   }
 }
